# Self-Learning

./: .gitignore  .gitmodules  README.md
Cpp/Cpp-Talks/: Type-Deduction-And-Why-You-Should-Care.cpp
Cpp/Cpp-Weekly/: 11-std::future-Part-2.cpp  16-Avoid-std::bind.cpp  17-std::invoke.cpp  18-constexpr-if.cpp  20-Fold-Expressions.cpp  21-If-and-Switch-init-statements.cpp  22-Nested-Namespaces-and-std::clamp.cpp  26-Language-Features-Removed-in-c++17.cpp  27-Changes-To-Sequence-Containers.cpp  28-C++17-FallThrough-Attr.cpp  29-C++17-MaybeUnused-Attribute.cpp  30-C++-Nodiscard-Attribute.cpp  4-Variadic-Template-Refactor.cpp  6-Intro-To-Variadic-Templates.cpp  a.out
Cpp/Lectures/: 5-Some-C++-Review.cpp  a.out
Crypto/: cs639.txt  defi.txt
Crypto/EVM/: EVM-YUL-Course.txt
CsTopics/: 1-Reliable-Scalable-And-Maintainable-Applications.txt  Chapter2.txt  notes.txt
CsTopics/Art-Of-Multiprocessor-Programming/: 1-Introduction.txt
CsTopics/Computer-Organization-And-Design/: 1-Computer-Abstractions-and-Technology.txt  2-Instructions.txt
CsTopics/Engineering-A-Compiler/: 1-Overview-Of-Compilation.txt  2-Scanners.txt
CsTopics/Linux-Kernel-Development/: 1-Introduction-to-the-linux-kernel.txt  2-Getting-Started-With-The-Kernel.txt  3-The-Process.txt
CsTopics/Memory-Consistency-and-Cache-Coherence/: 1-Introduction-To-Consistency-and-Coherence.txt
CsTopics/Multicore-and-GPU-programming/: 1-Introduction.txt  (+1 more)
Rust/Zero-To-Prod/: Cargo.toml
Rust/Zero-To-Prod/src/: lib.rs  main.rs
Rust/Zero-To-Prod/src/tests/: health_check.rs
Rust/Zero-To-Prod/tests/: health_check.rs
(+607 files in other folders)
